# lob_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt  benchmark_allocator.cpp  benchmark_matching.cpp  benchmark_order_book.cpp
examples/: CMakeLists.txt  basic_example.cpp
include/: matching_engine.hpp  order_book.hpp  types.hpp
include/allocator/: slab_allocator.hpp
src/: matching_engine.cpp  order_book.cpp  slab_allocator.cpp
tests/: CMakeLists.txt  test_allocator.cpp  test_matching_engine.cpp  test_order_book.cpp
